# lunar-slackbot-gitlab-integration

./: pyproject.toml
.github/workflows/: mr_scapper_schedule.yml
mr_report/: __main__.py
mr_scapper/: __main__.py
